@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-26T16:26:59Z",
+  "timestamp" : "2022-04-27T01:45:33Z",
   "count_outdated" : 1779,
   "uniques_outdated" : 335,
-  "count" : 1824,
-  "uniques" : 362,
+  "count" : 1825,
+  "uniques" : 363,
   "clones" : [
     {
       "timestamp": "2022-04-13T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-04-26T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 0, 5 ],
-      "uniques": 3,
-      "uniques_minmax": [ 0, 3 ]
+      "count": 6,
+      "count_minmax": [ 0, 6 ],
+      "uniques": 4,
+      "uniques_minmax": [ 0, 4 ]
     }
   ]
 }
