@@ -1,5 +1,5 @@
 {
-  "count": 45,
+  "count": 46,
   "uniques": 16,
   "clones": [
     {
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-04-26T00:00:00Z",
-      "count": 5,
-      "uniques": 3
+      "count": 6,
+      "uniques": 4
     }
   ]
 }
