@@ -1,3 +1,9 @@
+2022-04-27T01:45:33Z:
+* notice: last 14d: all unq: 46 16
+* notice: prev accum: outdated-all outdated-unq / all unq: 1779 335 / 1824 362
+* notice: next accum: outdated-all outdated-unq / all unq: 1779 335 / 1825 363
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-26T16:26:59Z:
 * notice: last 14d: all unq: 45 16
 * notice: prev accum: outdated-all outdated-unq / all unq: 1779 335 / 1819 359
